--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="text-gray-700 body-font" style="background-color: #74B9FF;">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="font-family: 'Lexend Tera', sans-serif;">SLEEP : CODE : CODE : REPEAT
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="font-family: 'Lexend Tera', sans-serif;">SLEEP : EAT : CODE : REPEAT
             </h1>
             <p class="mb-8 leading-relaxed">This lockdown is one the best opurtuniity to enhance your coding skills. Utilize this time to the fullest. It's never late to beginn something from a new end. If you are a begginer here you will get some useful stuff to start your coder journey. </p>
           </div>
