--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="flex-grow">
                   <p class="leading-relaxed text-base">Visual Studio Code is a free source-code editor made by Microsoft for Windows, Linux and macOS. Features include support for debugging, syntax highlighting, intelligent code completion, snippets, code refactoring, and embedded Git. </p>
-                  <a class="mt-3 text-indigo-500 inline-flex items-center" href="https://code.visualstudio.com/" target="blank">Learn More
+                  <a class="mt-3 text-indigo-500 inline-flex items-center" href="https://code.visualstudio.com/" target="blank">Download Here
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
                     </svg>
@@ -78,7 +78,7 @@
                 <div class="flex-grow">
                   <p class="leading-relaxed text-base">Description
                     Atom is a free and open-source text and source code editor for macOS, Linux, and Microsoft Windows with support for plug-ins written in Node.js, and embedded Git Control, developed by GitHub. Atom is a desktop application built using web technologies.</p>
-                  <a class="mt-3 text-indigo-500 inline-flex items-center" href="https://atom.io/" target="blank">Learn More
+                  <a class="mt-3 text-indigo-500 inline-flex items-center" href="https://atom.io/" target="blank">Download Here
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
                     </svg>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="flex-grow">
                   <p class="leading-relaxed text-base">Sublime Text is a shareware cross-platform source code editor with a Python application programming interface. It natively supports many programming languages and markup languages, and functions can be added by users with plugins, typically community-built and maintained under free-software licenses. </p>
-                  <a class="mt-3 text-indigo-500 inline-flex items-center" href="https://www.sublimetext.com/" target="blank">Learn More
+                  <a class="mt-3 text-indigo-500 inline-flex items-center" href="https://www.sublimetext.com/" target="blank">Download Here
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
                     </svg>
